styling issues fixed (scrolling and overflow) and better comments

--- a/extension/public/content.css
+++ b/extension/public/content.css
@@ -16,11 +16,12 @@
   color: green;
   pointer-events: none;
   white-space: pre-wrap;
+  overflow-y: visible;
 }
 
 @media screen and (min-width: 768px) {
   .ghost-textarea {
-    padding: 1rem 3rem 1rem 1rem;
+    padding: 0.875rem 3rem 1rem 1rem;
   }
 }
 
